Fix bug that sometimes caused overflow of long numbers

--- a/style.css
+++ b/style.css
@@ -138,7 +138,6 @@ a {
 
   .currentNumber {
     font-size: 6vh;
-    width: 43vh;
   }
   
   .keyboard {
